# restapi_gnivc

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 4c35167a7a1a_add_hashed_password_to_user.py  d9cb13de0de7_initial_migration.py
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: checks.py  health.py  invoices.py  login.py  organizations.py  receipts.py  users.py
app/core/: config.py  logging.py  security.py
app/crud/: crud_check.py  crud_invoice.py  crud_organization.py  crud_receipt.py  crud_user.py
app/db/: session.py
app/models/: receipt.py
app/schemas/: check.py  receipt.py  token.py
scripts/: populate_db.py
tests/: conftest.py  test_api.py
