[tool.poetry]
name = "restapi-gnivc"
version = "0.1.0"
description = ""
authors = ["Chu4hel <106600877+Chu4hel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.42"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
psycopg2 = "^2.9.10"
python-jose = "^3.5.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"